syntax = "proto3";

package com.example.gnewsapi;

message ProtobufArticle {
    string source_name = 1;
    string author = 2;
    string title = 3;
    string description = 4;
    string url = 5;
    string url_to_image = 6;
    string content = 7;
}